--- a/index.html
+++ b/index.html
@@ -45,28 +45,23 @@
       <h3>Nguyễn Tiến Anh</h3>
       <p>MSSV: 224895</p>
       <div class="links">
-        <a href="#" onclick="return false;">Đơn xin việc</a>
-        <a href="#" onclick="return false;">CV</a>
-        <a href="#" onclick="return false;">Google Form</a>
+        <a href="https://drive.google.com/file/d/1ZDBbMqZ_wEnBoI3gA8h1GqxJSp9hiTq8/view" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/file/d/1xKLHxvNDMhzOpy9r5QhY5Frdo4QOr0yS/view" target="_blank">CV</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
         <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
+
     <div class="team-card">
-    <div class="avatar"></div>
-    <h3>Cao Hoài Bảo</h3>
-    <p>MSSV: 226588</p>
-    <div class="links">
-        <a href="https://drive.google.com/drive/folders/1EbTwKU8q-RyhmnRBuB1P2nooaf36fmSK"
-        target="_blank" rel="noopener noreferrer">Đơn xin việc</a>
-
-        <a href="https://drive.google.com/drive/u/0/folders/1EbTwKU8q-RyhmnRBuB1P2nooaf36fmSK"
-        target="_blank" rel="noopener noreferrer">CV</a>
-
-        <a href="#" onclick="return false;">Google Form</a>
-
-        <a href="https://caohoaibao.my.canva.site/"
-        target="_blank" rel="noopener noreferrer">Web cá nhân</a>
-    </div>
+      <div class="avatar"></div>
+      <h3>Cao Hoài Bảo</h3>
+      <p>MSSV: 226588</p>
+      <div class="links">
+        <a href="https://drive.google.com/drive/folders/1EbTwKU8q-RyhmnRBuB1P2nooaf36fmSK" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/drive/folders/1EbTwKU8q-RyhmnRBuB1P2nooaf36fmSK" target="_blank">CV</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
+        <a href="https://caohoaibao.my.canva.site/" target="_blank">Web cá nhân</a>
+      </div>
     </div>
 
     <div class="team-card">
@@ -76,7 +71,7 @@
       <div class="links">
         <a href="#" onclick="return false;">Đơn xin việc</a>
         <a href="#" onclick="return false;">CV</a>
-        <a href="#" onclick="return false;">Google Form</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
         <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
@@ -86,9 +81,9 @@
       <h3>Quách Vĩ Khang</h3>
       <p>MSSV: 222099</p>
       <div class="links">
-        <a href="#" onclick="return false;">Đơn xin việc</a>
-        <a href="#" onclick="return false;">CV</a>
-        <a href="#" onclick="return false;">Google Form</a>
+        <a href="https://drive.google.com/drive/folders/1i7XxWKGJUvLXImTAp8IjT-VK6N3HDadr" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/drive/folders/1i7XxWKGJUvLXImTAp8IjT-VK6N3HDadr" target="_blank">CV</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
         <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
@@ -98,9 +93,9 @@
       <h3>Châu Kiều My</h3>
       <p>MSSV: 221755</p>
       <div class="links">
-        <a href="#" onclick="return false;">Đơn xin việc</a>
-        <a href="#" onclick="return false;">CV</a>
-        <a href="#" onclick="return false;">Google Form</a>
+        <a href="https://drive.google.com/drive/folders/1FiznJRhvcTg3SLzVhqyaRsvo3ZI2KkNZ" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/drive/folders/1FiznJRhvcTg3SLzVhqyaRsvo3ZI2KkNZ" target="_blank">CV</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
         <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
@@ -110,9 +105,9 @@
       <h3>Vũ Nguyễn Kim Ngọc</h3>
       <p>MSSV: 224254</p>
       <div class="links">
-        <a href="#" onclick="return false;">Đơn xin việc</a>
-        <a href="#" onclick="return false;">CV</a>
-        <a href="#" onclick="return false;">Google Form</a>
+        <a href="https://drive.google.com/file/d/1Qzb-Pd_DjOQAPdWuh7HKX5qqpilDoTZ6/view" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/file/d/1hsptEJVGL3XyqsuydxpKf2Kq2LYzZ3Ym/view" target="_blank">CV</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
         <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
@@ -124,13 +119,14 @@
       <div class="links">
         <a href="#" onclick="return false;">Đơn xin việc</a>
         <a href="#" onclick="return false;">CV</a>
-        <a href="#" onclick="return false;">Google Form</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
         <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
 
   </div>
 </section>
+
 
 
 <!-- PROJECTS -->
