--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
   </nav>
 </header>
 
-<!-- HERO -->
+<!-- HERO TEXT -->
 <section class="hero" id="home">
   <span class="badge">🟢 Sẵn sàng hợp tác</span>
   <h1>XIN CHÀO,<br>CHÚNG TÔI LÀ NHÓM 2</h1>
   <p>Portfolio nhóm sinh viên Công nghệ Thông tin – Web Developer</p>
+</section>
+
+<!-- BANNER IMAGE FULL -->
+<section class="hero-banner-wrap">
+  <img src="assets/banner_portfolio.jpg" class="hero-banner" alt="Banner nhóm 2">
 </section>
 
 <!-- ABOUT -->
@@ -48,7 +53,6 @@
         <a href="https://drive.google.com/file/d/1ZDBbMqZ_wEnBoI3gA8h1GqxJSp9hiTq8/view" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1xKLHxvNDMhzOpy9r5QhY5Frdo4QOr0yS/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
 
@@ -60,7 +64,6 @@
         <a href="https://drive.google.com/drive/folders/1EbTwKU8q-RyhmnRBuB1P2nooaf36fmSK" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/drive/folders/1EbTwKU8q-RyhmnRBuB1P2nooaf36fmSK" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="https://caohoaibao.my.canva.site/" target="_blank">Web cá nhân</a>
       </div>
     </div>
 
@@ -72,7 +75,6 @@
         <a href="#" onclick="return false;">Đơn xin việc</a>
         <a href="#" onclick="return false;">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
 
@@ -84,7 +86,6 @@
         <a href="https://drive.google.com/drive/folders/1i7XxWKGJUvLXImTAp8IjT-VK6N3HDadr" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/drive/folders/1i7XxWKGJUvLXImTAp8IjT-VK6N3HDadr" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
 
@@ -96,7 +97,6 @@
         <a href="https://drive.google.com/drive/folders/1FiznJRhvcTg3SLzVhqyaRsvo3ZI2KkNZ" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/drive/folders/1FiznJRhvcTg3SLzVhqyaRsvo3ZI2KkNZ" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
 
@@ -108,7 +108,6 @@
         <a href="https://drive.google.com/file/d/1Qzb-Pd_DjOQAPdWuh7HKX5qqpilDoTZ6/view" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1hsptEJVGL3XyqsuydxpKf2Kq2LYzZ3Ym/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
 
@@ -116,11 +115,10 @@
       <div class="avatar"></div>
       <h3>Nguyễn Ngọc Minh Nhựt</h3>
       <p>MSSV: 221015</p>
-      <div class="links">
-        <a href="#" onclick="return false;">Đơn xin việc</a>
-        <a href="#" onclick="return false;">CV</a>
+       <div class="links">
+        <a href="https://drive.google.com/file/d/1tNejUYlRS8zo0aLW0GAZoI9tf5ve3TB7/view" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/file/d/1Z4x_YNOsfA8JRY-he62kwShJR7bjj0YM/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="#" onclick="return false;">Web cá nhân</a>
       </div>
     </div>
 
