--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <h3>Cao Hoài Bảo</h3>
       <p>MSSV: 226588</p>
       <div class="links">
-        <a href="https://drive.google.com/drive/folders/1EbTwKU8q-RyhmnRBuB1P2nooaf36fmSK" target="_blank">Đơn xin việc</a>
-        <a href="https://drive.google.com/drive/folders/1EbTwKU8q-RyhmnRBuB1P2nooaf36fmSK" target="_blank">CV</a>
+        <a href="https://drive.google.com/file/d/1GnnEmREPRzzDdEPaN0x5ALkw0LqUwB8W/view?usp=sharing" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/file/d/1Ckczxfm1RawiX663YLFKyKOJlJvrOR8u/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
       </div>
     </div>
@@ -71,9 +71,9 @@
       <div class="avatar"></div>
       <h3>Quách Hoàng Bảo</h3>
       <p>MSSV: 226874</p>
-      <div class="links">
-        <a href="#" onclick="return false;">Đơn xin việc</a>
-        <a href="#" onclick="return false;">CV</a>
+     <div class="links">
+        <a href="https://drive.google.com/file/d/1DGPj_uJAIlUd-aUFzjYUCgE6ifGp0CT9/view?usp=sharing" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/file/d/1jMoJlMSKEt4IE8bYRBJGpQ52HUoLJk_c/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
       </div>
     </div>
@@ -83,8 +83,8 @@
       <h3>Quách Vĩ Khang</h3>
       <p>MSSV: 222099</p>
       <div class="links">
-        <a href="https://drive.google.com/drive/folders/1i7XxWKGJUvLXImTAp8IjT-VK6N3HDadr" target="_blank">Đơn xin việc</a>
-        <a href="https://drive.google.com/drive/folders/1i7XxWKGJUvLXImTAp8IjT-VK6N3HDadr" target="_blank">CV</a>
+        <a href="https://drive.google.com/file/d/1Cbmj_xEuyCgk0YkUweGHnTSVs6K68nTp/view?usp=sharing" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/file/d/1GEbto9IfWvNW2Mx9bWAEEZm4wHFzjllw/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
       </div>
     </div>
@@ -94,8 +94,8 @@
       <h3>Châu Kiều My</h3>
       <p>MSSV: 221755</p>
       <div class="links">
-        <a href="https://drive.google.com/drive/folders/1FiznJRhvcTg3SLzVhqyaRsvo3ZI2KkNZ" target="_blank">Đơn xin việc</a>
-        <a href="https://drive.google.com/drive/folders/1FiznJRhvcTg3SLzVhqyaRsvo3ZI2KkNZ" target="_blank">CV</a>
+        <a href="https://drive.google.com/file/d/1qYhxk3lj6nxdR7wAig_QOOAHCzPDjJ4N/view?usp=sharing" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/file/d/1E9gctQ8sv6NIy-_s6ES05fwZPmuXIUuL/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
       </div>
     </div>
@@ -116,7 +116,7 @@
       <h3>Nguyễn Ngọc Minh Nhựt</h3>
       <p>MSSV: 221015</p>
        <div class="links">
-        <a href="https://drive.google.com/file/d/1tNejUYlRS8zo0aLW0GAZoI9tf5ve3TB7/view" target="_blank">Đơn xin việc</a>
+        <a href="https://drive.google.com/file/d/1a2dLqTX6ovCDtKj2j2GKyM1e7A2ezWoD/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1Z4x_YNOsfA8JRY-he62kwShJR7bjj0YM/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
       </div>
