--- a/index.html
+++ b/index.html
@@ -35,10 +35,21 @@
 <section class="section" id="about">
   <h2>Giới thiệu nhóm</h2>
   <p class="desc">
-    Nhóm 2 là nhóm sinh viên CNTT với mục tiêu xây dựng website hiện đại,
-    dễ sử dụng, phục vụ học tập và thực tế doanh nghiệp.
+    Nhóm 2 là nhóm sinh viên ngành Công nghệ Thông tin, được thành lập với mục tiêu
+    nghiên cứu, học tập và xây dựng các sản phẩm website hiện đại, thân thiện với người dùng
+    và có tính ứng dụng cao trong thực tế doanh nghiệp. Nhóm luôn chú trọng vào việc áp dụng
+    kiến thức đã học như HTML, CSS, JavaScript và các công nghệ web mới để tạo ra những sản phẩm
+    có giao diện đẹp, tốc độ tốt và dễ sử dụng.
+  </p>
+  <p class="desc">
+    Trong quá trình thực hiện dự án, các thành viên trong nhóm không ngừng trao đổi, học hỏi lẫn nhau,
+    rèn luyện kỹ năng làm việc nhóm, tư duy giải quyết vấn đề và tiếp cận quy trình phát triển phần mềm
+    chuyên nghiệp. Mục tiêu của nhóm không chỉ dừng lại ở việc hoàn thành bài tập môn học mà còn hướng
+    đến việc xây dựng các sản phẩm có thể sử dụng lâu dài, phục vụ học tập và đáp ứng nhu cầu thực tế
+    của người dùng.
   </p>
 </section>
+
 
 <!-- TEAM -->
 <section class="section" id="team">
@@ -53,6 +64,7 @@
         <a href="https://drive.google.com/file/d/1ZDBbMqZ_wEnBoI3gA8h1GqxJSp9hiTq8/view" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1xKLHxvNDMhzOpy9r5QhY5Frdo4QOr0yS/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
+        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -64,6 +76,7 @@
         <a href="https://drive.google.com/file/d/1GnnEmREPRzzDdEPaN0x5ALkw0LqUwB8W/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1Ckczxfm1RawiX663YLFKyKOJlJvrOR8u/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
+        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -75,6 +88,7 @@
         <a href="https://drive.google.com/file/d/1DGPj_uJAIlUd-aUFzjYUCgE6ifGp0CT9/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1jMoJlMSKEt4IE8bYRBJGpQ52HUoLJk_c/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
+        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -86,6 +100,7 @@
         <a href="https://drive.google.com/file/d/1Cbmj_xEuyCgk0YkUweGHnTSVs6K68nTp/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1GEbto9IfWvNW2Mx9bWAEEZm4wHFzjllw/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
+        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -97,6 +112,7 @@
         <a href="https://drive.google.com/file/d/1qYhxk3lj6nxdR7wAig_QOOAHCzPDjJ4N/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1E9gctQ8sv6NIy-_s6ES05fwZPmuXIUuL/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
+        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -108,6 +124,7 @@
         <a href="https://drive.google.com/file/d/1Qzb-Pd_DjOQAPdWuh7HKX5qqpilDoTZ6/view" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1hsptEJVGL3XyqsuydxpKf2Kq2LYzZ3Ym/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
+        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -119,6 +136,7 @@
         <a href="https://drive.google.com/file/d/1a2dLqTX6ovCDtKj2j2GKyM1e7A2ezWoD/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1Z4x_YNOsfA8JRY-he62kwShJR7bjj0YM/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
+        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -217,31 +235,38 @@
 
 <!-- CONTACT -->
 <section class="section contact-section" id="contact">
-  <h2>Connect with us</h2>
-  <p class="sub">Bạn có ý tưởng hoặc dự án? Đừng ngại liên hệ với chúng tôi.</p>
+  <h2>Liên hệ với chúng tôi</h2>
+  <p class="sub">
+    Bạn có ý tưởng, dự án hoặc muốn hợp tác? Hãy để lại thông tin, chúng tôi sẽ liên hệ lại sớm nhất.
+  </p>
 
   <div class="contact-grid">
+    <!-- LEFT -->
     <div class="contact-left">
       <div class="box">
-        <h3>Liên hệ</h3>
+        <h3>Thông tin liên hệ</h3>
         <div class="item">📞 0912345678</div>
         <div class="item">✉️ nhom2@gmail.com</div>
       </div>
+
       <div class="box">
-        <h3>Theo dõi</h3>
+        <h3>Theo dõi chúng tôi</h3>
         <div class="item">📘 Facebook: Nhóm 2</div>
         <div class="item">📺 Youtube: Nhóm 2 CNTT</div>
       </div>
     </div>
 
-    <form class="contact-form">
-      <input type="text" placeholder="Tên của bạn" required>
-      <input type="text" placeholder="Email hoặc số điện thoại" required>
-      <textarea placeholder="Nội dung tin nhắn..."></textarea>
-      <button type="submit">Gửi tin nhắn</button>
+    <!-- FORM -->
+    <form class="contact-form" action="https://formspree.io/f/abcdxyz" method="POST">
+        <input type="text" name="name" placeholder="Tên của bạn" required>
+        <input type="email" name="email" placeholder="Email" required>
+        <textarea name="message" placeholder="Nội dung..." required></textarea>
+        <button type="submit">Gửi tin nhắn</button>
     </form>
+
   </div>
 </section>
+
 
 <footer>© 2026 – Nhóm 2 | Portfolio sinh viên CNTT</footer>
 
