hoan thien website

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="https://drive.google.com/file/d/1ZDBbMqZ_wEnBoI3gA8h1GqxJSp9hiTq8/view" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1xKLHxvNDMhzOpy9r5QhY5Frdo4QOr0yS/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
+        <a href="https://nguyentienanh224895.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -88,7 +88,7 @@
         <a href="https://drive.google.com/file/d/1DGPj_uJAIlUd-aUFzjYUCgE6ifGp0CT9/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1jMoJlMSKEt4IE8bYRBJGpQ52HUoLJk_c/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
+        <a href="https://quachbao.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -100,7 +100,7 @@
         <a href="https://drive.google.com/file/d/1Cbmj_xEuyCgk0YkUweGHnTSVs6K68nTp/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1GEbto9IfWvNW2Mx9bWAEEZm4wHFzjllw/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
+        <a href="https://quachvikhang.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -112,7 +112,7 @@
         <a href="https://drive.google.com/file/d/1qYhxk3lj6nxdR7wAig_QOOAHCzPDjJ4N/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1E9gctQ8sv6NIy-_s6ES05fwZPmuXIUuL/view?usp=sharing" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
+        <a href="https://trangwebcanhanckmy.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -124,7 +124,7 @@
         <a href="https://drive.google.com/file/d/1Qzb-Pd_DjOQAPdWuh7HKX5qqpilDoTZ6/view" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1hsptEJVGL3XyqsuydxpKf2Kq2LYzZ3Ym/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
+        <a href="https://kimngocpfl.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
@@ -136,7 +136,7 @@
         <a href="https://drive.google.com/file/d/1a2dLqTX6ovCDtKj2j2GKyM1e7A2ezWoD/view?usp=sharing" target="_blank">Đơn xin việc</a>
         <a href="https://drive.google.com/file/d/1Z4x_YNOsfA8JRY-he62kwShJR7bjj0YM/view" target="_blank">CV</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfklSXGfvPWhrqLEmfznERXIYwg4nqM3gk_eCjTvGNE4qs3PQ/viewform" target="_blank">Google Form</a>
-        <a href="https://caohoaibao.my.canva.site/" target="_blank">Website cá nhân</a>
+        <a href="https://nnminhnhut.my.canva.site/" target="_blank">Website cá nhân</a>
       </div>
     </div>
 
